examples/test/testpolicy8176.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8176
  namespace: namespace119
spec:
  podSelector:
    matchLabels:
      key1: value23
      key47: value34
      key48: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value36
          key1: value47
          key4: value8
      podSelector:
        matchLabels:
          key6: value37
          key41: value43
          key20: value36
